apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    buildToolsVersion "28.0.0"
    defaultConfig {
        applicationId "org.hexian000.dynatweak"
        minSdkVersion 19
        targetSdkVersion 28
        versionCode 49
        versionName "5.4.4"
    }
    flavorDimensions 'overlay'
    productFlavors {
        std {
            dimension 'overlay'
        }
        tz {
            dimension 'overlay'
            versionNameSuffix 'tz'
        }
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    applicationVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "Dynatweak-${variant.versionName}.apk"
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
}
